--- a/SPMS/appsettings.Development.json
+++ b/SPMS/appsettings.Development.json
@@ -11,7 +11,7 @@
   "MailSettings": {
     "Mail": "techooze1@gmail.com",
     "DisplayName": "CPMS",
-    "Password": "vnquhtmfomjabkey",
+    "Password": "vekyrvhvcenxuqcz",
     "Host": "smtp.gmail.com",
     "Port": 587
   }
