--- a/SPMS/Properties/launchSettings.json
+++ b/SPMS/Properties/launchSettings.json
@@ -8,7 +8,7 @@
     }
   },
   "profiles": {
-    "SPMS": {
+    "CPMS": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
