--- a/SPMS/CPMS.csproj
+++ b/SPMS/CPMS.csproj
@@ -22,6 +22,7 @@
 	<PackageReference Include="HtmlAgilityPack" Version="1.11.46" />
 	<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.7" />
 	<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.7" />
+	<PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="6.0.10" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.7" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.7" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.7">
