--- a/SPMS/CPMS.csproj
+++ b/SPMS/CPMS.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
 	<None Include="Areas\Students\Views\Project\Index.cshtml" />
+	<None Include="Areas\Supervisors\Views\Notification\Notify.cshtml" />
 	<None Include="Areas\Supervisors\Views\Project\PStudent.cshtml" />
 	<None Include="Views\Account\Login.cshtml" />
   </ItemGroup>
