--- a/SPMS/appsettings.json
+++ b/SPMS/appsettings.json
@@ -7,6 +7,14 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server="
+    //"DefaultConnection": "Data Source=SQL8004.site4now.net;Initial Catalog=db_a8f998_fpespmsdb;User Id=db_a8f998_fpespmsdb_admin;Password=Wertyuiop2",
+    "DefaultConnection": "Server=.\\SQLEXPRESS; Database =  SPMSDB; Integrated Security = true; MultipleActiveResultSets=true"
+  },
+  "MailSettings": {
+    "Mail": "techooze1@gmail.com",
+    "DisplayName": "CPMS",
+    "Password": "vekyrvhvcenxuqcz",
+    "Host": "smtp.gmail.com",
+    "Port": 587
   }
 }
