--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@
 *.userosscache
 *.sln.docstates
 *.appsettings.development.json
+*.appsettings.json
+*.libman.json
+
+
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
