--- a/SPMS/Properties/launchSettings.json
+++ b/SPMS/Properties/launchSettings.json
@@ -14,14 +14,14 @@
       "launchBrowser": true,
       "applicationUrl": "https://localhost:7241;http://localhost:5241",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Production"
       }
     },
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Production"
       }
     }
   }
