--- a/SPMS/appsettings.Development.json
+++ b/SPMS/appsettings.Development.json
@@ -4,15 +4,15 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SQLEXPRESS; Database =  SPMSDB; Integrated Security = true; MultipleActiveResultSets=true"
-  },
-  "MailSettings": {
-    "Mail": "techooze1@gmail.com",
-    "DisplayName": "CPMS",
-    "Password": "vekyrvhvcenxuqcz",
-    "Host": "smtp.gmail.com",
-    "Port": 587
   }
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "Server=.\\SQLEXPRESS; Database =  SPMSDB; Integrated Security = true; MultipleActiveResultSets=true"
+  //},
+  //"MailSettings": {
+  //  "Mail": "techooze1@gmail.com",
+  //  "DisplayName": "CPMS",
+  //  "Password": "vekyrvhvcenxuqcz",
+  //  "Host": "smtp.gmail.com",
+  //  "Port": 587
+  //}
 }
