Remove ignored files

--- a/SPMS/appsettings.json
+++ b/SPMS/appsettings.json
@@ -7,8 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"DefaultConnection": "Data Source=SQL8004.site4now.net;Initial Catalog=db_a8f998_fpespmsdb;User Id=db_a8f998_fpespmsdb_admin;Password=Wertyuiop2",
-    "DefaultConnection": "Server=.\\SQLEXPRESS; Database =  SPMSDB; Integrated Security = true; MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=SQL8004.site4now.net;Initial Catalog=db_a8f998_fpespmsdb;User Id=db_a8f998_fpespmsdb_admin;Password=Wertyuiop2"
   },
   "MailSettings": {
     "Mail": "techooze1@gmail.com",
