--- a/SPMS/CPMS.csproj
+++ b/SPMS/CPMS.csproj
@@ -8,10 +8,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Areas\Admins\Views\Dashboard\Profile.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
 	<None Remove="Program.cs~RF4743faf.TMP" />
   </ItemGroup>
 
   <ItemGroup>
+	<None Include="Areas\Admins\Views\Dashboard\Profile.cshtml" />
 	<None Include="Areas\Students\Views\Project\Index.cshtml" />
 	<None Include="Areas\Supervisors\Views\Project\PStudent.cshtml" />
 	<None Include="Views\Account\Login.cshtml" />
@@ -39,6 +44,14 @@
 
   <ItemGroup>
 	<Folder Include="wwwroot\uploads\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Areas\Admins\Views\Dashboard\Profile.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Areas\Admins\Views\Dashboard\Profile.cshtml" />
   </ItemGroup>
 
 	</Project>
