--- a/SPMS/CPMS.csproj
+++ b/SPMS/CPMS.csproj
@@ -25,7 +25,9 @@
   <ItemGroup>
 	<PackageReference Include="AspNetCoreHero.ToastNotification" Version="1.1.0" />
 	<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+	<PackageReference Include="GroupDocs.Viewer" Version="22.9.0" />
 	<PackageReference Include="HtmlAgilityPack" Version="1.11.46" />
+	<PackageReference Include="IronPdf" Version="2022.11.10347" />
 	<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.7" />
 	<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.7" />
 	<PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="6.0.10" />
