--- a/SPMS/CPMS.csproj
+++ b/SPMS/CPMS.csproj
@@ -7,6 +7,14 @@
 	<ServerGarbageCollection>false</ServerGarbageCollection>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <Optimize>False</Optimize>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <Optimize>True</Optimize>
+  </PropertyGroup>
+
   <ItemGroup>
 	<Content Remove="Areas\admins\Views\Dashboard\Profile.cshtml" />
   </ItemGroup>
@@ -24,10 +32,12 @@
 
   <ItemGroup>
 	<PackageReference Include="AspNetCoreHero.ToastNotification" Version="1.1.0" />
+	<PackageReference Include="Aspose.pdf" Version="22.10.0" />
+	<PackageReference Include="Aspose.Words" Version="22.11.0" />
 	<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
 	<PackageReference Include="GroupDocs.Viewer" Version="22.9.0" />
 	<PackageReference Include="HtmlAgilityPack" Version="1.11.46" />
-	<PackageReference Include="IronPdf" Version="2022.11.10347" />
+	<PackageReference Include="ILove_PDF" Version="1.3.3" />
 	<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.7" />
 	<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.7" />
 	<PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="6.0.10" />
@@ -38,7 +48,7 @@
 	  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	</PackageReference>
 	<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.9" />
-	<PackageReference Include="Spire.Office" Version="7.11.0" />
+	<PackageReference Include="RestSharp" Version="108.0.3" />
   </ItemGroup>
 
   <ItemGroup>
