--- a/SPMS/CPMS.csproj
+++ b/SPMS/CPMS.csproj
@@ -16,7 +16,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-	<Content Remove="Areas\admins\Views\Dashboard\Profile.cshtml" />
+	<Content Remove="Areas\ad\Views\Dashboard\Profile.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -24,9 +24,9 @@
   </ItemGroup>
 
   <ItemGroup>
-	<None Include="Areas\admins\Views\Dashboard\Profile.cshtml" />
-	<None Include="Areas\students\Views\Project\Index.cshtml" />
-	<None Include="Areas\supervisors\Views\Project\PStudent.cshtml" />
+	<None Include="Areas\ad\Views\Dashboard\Profile.cshtml" />
+	<None Include="Areas\st\Views\Project\Index.cshtml" />
+	<None Include="Areas\su\Views\Project\PStudent.cshtml" />
 	<None Include="Views\Account\Login.cshtml" />
   </ItemGroup>
 
@@ -60,11 +60,11 @@
   </ItemGroup>
 
   <ItemGroup>
-	<UpToDateCheckInput Remove="Areas\admins\Views\Dashboard\Profile.cshtml" />
+	<UpToDateCheckInput Remove="Areas\ad\Views\Dashboard\Profile.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
-	<_ContentIncludedByDefault Remove="Areas\admins\Views\Dashboard\Profile.cshtml" />
+	<_ContentIncludedByDefault Remove="Areas\ad\Views\Dashboard\Profile.cshtml" />
   </ItemGroup>
 
 	</Project>
