--- a/SPMS/SPMS.csproj
+++ b/SPMS/SPMS.csproj
@@ -21,8 +21,6 @@
 
   <ItemGroup>
 	<None Remove="Program.cs~RF4743faf.TMP" />
-	<None Remove="Properties\PublishProfiles\jaycodes-001-site1 - FTP.pubxml" />
-	<None Remove="Properties\PublishProfiles\jaycodes-001-site1 - Web Deploy.pubxml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -37,8 +35,11 @@
 	<PackageReference Include="AspNetCoreHero.ToastNotification" Version="1.1.0" />
 	<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
 	<PackageReference Include="CsvHelper" Version="30.0.1" />
+	<PackageReference Include="FreeSpire.Doc" Version="10.8.0" />
+	<PackageReference Include="GroupDocs.Viewer" Version="22.11.0" />
 	<PackageReference Include="HtmlAgilityPack" Version="1.11.46" />
-	<PackageReference Include="ILove_PDF" Version="1.3.3" />
+	<PackageReference Include="ILove_PDF" Version="1.4.0" />
+	<PackageReference Include="LibreOfficeLibrary" Version="1.0.7" />
 	<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.7" />
 	<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.7" />
 	<PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.1" />
@@ -50,6 +51,7 @@
 	</PackageReference>
 	<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.9" />
 	<PackageReference Include="RestSharp" Version="108.0.3" />
+	<PackageReference Include="Syncfusion.DocIORenderer.Net.Core" Version="20.4.0.50" />
 	<PackageReference Include="WebEssentials.AspNetCore.PWA" Version="1.0.65" />
   </ItemGroup>
 
@@ -58,6 +60,7 @@
   </ItemGroup>
 
   <ItemGroup>
+	<Folder Include="wwwroot\output\" />
 	<Folder Include="wwwroot\uploads\" />
   </ItemGroup>
 
