--- a/SPMS/SPMS.csproj
+++ b/SPMS/SPMS.csproj
@@ -35,6 +35,7 @@
 	<PackageReference Include="AspNetCoreHero.ToastNotification" Version="1.1.0" />
 	<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
 	<PackageReference Include="CsvHelper" Version="30.0.1" />
+	<PackageReference Include="DocumentFormat.OpenXml" Version="2.19.0" />
 	<PackageReference Include="FreeSpire.Doc" Version="10.8.0" />
 	<PackageReference Include="GroupDocs.Viewer" Version="22.11.0" />
 	<PackageReference Include="HtmlAgilityPack" Version="1.11.46" />
@@ -49,6 +50,7 @@
 	  <PrivateAssets>all</PrivateAssets>
 	  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	</PackageReference>
+	<PackageReference Include="Microsoft.Office.Interop.Word" Version="15.0.4797.1004" />
 	<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.9" />
 	<PackageReference Include="RestSharp" Version="108.0.3" />
 	<PackageReference Include="Syncfusion.DocIORenderer.Net.Core" Version="20.4.0.50" />
