--- a/SPMS/SPMS.csproj
+++ b/SPMS/SPMS.csproj
@@ -39,6 +39,8 @@
 	<PackageReference Include="FreeSpire.Doc" Version="10.8.0" />
 	<PackageReference Include="GroupDocs.Viewer" Version="22.11.0" />
 	<PackageReference Include="HtmlAgilityPack" Version="1.11.46" />
+	<PackageReference Include="Htmx" Version="1.0.1" />
+	<PackageReference Include="Htmx.TagHelpers" Version="1.0.1" />
 	<PackageReference Include="ILove_PDF" Version="1.4.0" />
 	<PackageReference Include="LibreOfficeLibrary" Version="1.0.7" />
 	<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.7" />
