--- a/SPMS/SPMS.csproj
+++ b/SPMS/SPMS.csproj
@@ -35,14 +35,9 @@
 	<PackageReference Include="AspNetCoreHero.ToastNotification" Version="1.1.0" />
 	<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
 	<PackageReference Include="CsvHelper" Version="30.0.1" />
-	<PackageReference Include="DocumentFormat.OpenXml" Version="2.19.0" />
-	<PackageReference Include="FreeSpire.Doc" Version="10.8.0" />
-	<PackageReference Include="GroupDocs.Viewer" Version="22.11.0" />
-	<PackageReference Include="HtmlAgilityPack" Version="1.11.46" />
 	<PackageReference Include="Htmx" Version="1.0.1" />
 	<PackageReference Include="Htmx.TagHelpers" Version="1.0.1" />
 	<PackageReference Include="ILove_PDF" Version="1.4.0" />
-	<PackageReference Include="LibreOfficeLibrary" Version="1.0.7" />
 	<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.7" />
 	<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.7" />
 	<PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.1" />
@@ -55,7 +50,7 @@
 	<PackageReference Include="Microsoft.Office.Interop.Word" Version="15.0.4797.1004" />
 	<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.9" />
 	<PackageReference Include="RestSharp" Version="108.0.3" />
-	<PackageReference Include="Syncfusion.DocIORenderer.Net.Core" Version="20.4.0.50" />
+	<PackageReference Include="Spire.Doc" Version="11.2.3" />
 	<PackageReference Include="WebEssentials.AspNetCore.PWA" Version="1.0.65" />
   </ItemGroup>
 
