--- a/SPMS/SPMS.csproj
+++ b/SPMS/SPMS.csproj
@@ -51,6 +51,7 @@
 	<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.12" />
 	<PackageReference Include="RestSharp" Version="108.0.3" />
 	<PackageReference Include="Spire.Doc" Version="11.2.3" />
+	<PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
 	<PackageReference Include="WebEssentials.AspNetCore.PWA" Version="1.0.65" />
   </ItemGroup>
 
